--- a/package.json
+++ b/package.json
@@ -3,7 +3,11 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node src/index.js",
+    "build": "tsc",
+    "dev:ts-node": "ts-node src/index.ts",
+    "dev:nodemon": "nodemon src/index.ts"
   },
   "keywords": [],
   "author": "",
@@ -12,11 +16,14 @@
   "dependencies": {
     "fastify": "^5.2.1",
     "graphql": "^16.10.0",
-    "mercurius": "^16.0.1"
+    "mercurius": "^16.0.1",
+    "reflect-metadata": "^0.2.2",
+    "type-graphql": "^2.0.0-rc.2"
   },
   "devDependencies": {
     "@types/node": "^22.13.1",
     "nodemon": "^3.1.9",
+    "ts-node": "^10.9.2",
     "typescript": "^5.7.3"
   }
 }
